--- a/indexie.html
+++ b/indexie.html
@@ -17,6 +17,9 @@
             <div class="destination" id="paris">
                 <h2>Paris</h2>
             </div>
+            <div class="destination" id="mus">
+                <h2>Muscat</h2>
+            </div>
         </div>
     </div>
 
